fixed project section overflow

--- a/src/container/work/Work.css
+++ b/src/container/work/Work.css
@@ -16,6 +16,7 @@
   width: 30%;
   align-items: center;
   margin: 3rem auto;
+  flex-wrap: wrap;
 }
 @media screen and (max-width: 900px) {
   .app__work-filter {
